--- a/Assignment HTML/Asssignment No 5 6 7/question7.html
+++ b/Assignment HTML/Asssignment No 5 6 7/question7.html
@@ -21,7 +21,12 @@
     <figure>
       <figcaption>click on pic to go question no 6</figcaption>
       <a href="question6.html">
-        <img src="1image.jpg" width="200px" height="200px" />
+        <img
+          src="1image.jpg"
+          width="200px"
+          height="200px"
+          title="this will leads you question no 5"
+        />
       </a>
     </figure>
   </body>
