--- a/Assignment HTML/Assignment No 4-registration/index.html
+++ b/Assignment HTML/Assignment No 4-registration/index.html
@@ -11,6 +11,9 @@
       .a {
         border: 1px solid;
       }
+      td {
+        background-color: grey;
+      }
     </style>
   </head>
   <body>
