--- a/Assignment HTML/ClassWebsite/index.html
+++ b/Assignment HTML/ClassWebsite/index.html
@@ -153,14 +153,14 @@
                     <p>A prominent or distinctive part, quality, or characteristic.</p>
                 </div>
                 <div class="box">
-                <div class="box1">
+                <div class="box1" style="padding:60px">
                   <div class="box-content">
                     <i style="font-size:24px" class="fa">&#xf1fe;</i>
                    <h3>Top Performance</h3>
                    <p>Top performers are good at handling pressure and are always ready to accept responsibilities.</p>
                   </div>
                 </div>
-                <div class="box2">
+                <div class="box2" style="padding:60px">
                   <div class="box-content">
                     <i class="fa fa-check-square-o" aria-hidden="true"></i>
                    <h3>Trusted Service</h3>
